# PicoCoffeeMachine

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
docker/: Dockerfile  docker-compose.yml
include/: configuration.h  icons.h  ktype_thermocouple.h  pico_adapter.h  pico_io_pin.h  pico_pid_controller.h  pico_serial.h  ssd1306_ascii_display.h
pcb/: PicoCoffeeMachine_2021-02-28.json
src/: hello_world.cpp  pico_coffee_machine_main.cpp
